changed images folder

--- a/residential.html
+++ b/residential.html
@@ -95,7 +95,7 @@
 
 						<!-- Logo -->
 						<a class="logo float-left scrollTo" href="#top">
-							<img src="../../Rocket Elevator Assets/RR2.png" alt="" />
+							<img src="demo_files/images/RR2.png" alt="" />
 						</a>
 
 						<!-- 
@@ -194,7 +194,7 @@
 						<!-- SLIDE  -->
 						<li data-transition="parallaxtobottom" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off"  data-title="Home">
 							<!-- MAIN IMAGE -->
-							<img src="demo_files/images/RE3.jpg"  alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+							<img src="demo_files/images/SLIDES/Slide1.jpg"  alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
 							<div class="tp-caption white_big skewfromleft tp-resizeme"
 								data-x="150"
@@ -278,7 +278,7 @@
 						<!-- SLIDE  -->
 						<li data-transition="parallaxtotop" data-slotamount="9" data-masterspeed="300"  data-saveperformance="off" data-title="Residential Service">
 							<!-- MAIN IMAGE -->
-							<img src="demo_files/images/RE7.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+							<img src="demo_files/images/SLIDES/Slide2.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
 							<div class="overlay dark-4"><!-- dark overlay [0 to 9 opacity] --></div>
 
@@ -332,7 +332,7 @@
 							<!-- SLIDE  -->
 						<li data-transition="parallaxtotop" data-slotamount="8" data-masterspeed="300"  data-saveperformance="off" data-title="Corporate Service">
 							<!-- MAIN IMAGE -->
-							<img src="demo_files/images/RE1.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+							<img src="demo_files/images/SLIDES/Slide3.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
 							<div class="overlay dark-4"><!-- dark overlay [0 to 9 opacity] --></div>
 
