completed small details on index

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main nav-onepage">
 									<li class="active"><!-- HOME -->
-										<a href="#home">
+										<a href="#">
 											HOME
 										</a>
 									</li>
@@ -214,8 +214,8 @@
 							<div class="tp-caption content_text_center skewfromleft tp-resizeme"
 								data-x="150"
 								data-y="200" 
-								data-speed="500"
-								data-start="2000"
+								data-speed="400"
+								data-start="1500"
 								data-easing="Power3.easeInOut"
 								data-splitin="none"
 								data-splitout="none"
@@ -232,8 +232,8 @@
 							<div class="tp-caption tp-fade"
 								data-x="left"
 								data-y="25" 
-								data-speed="300"
-								data-start="800"
+								data-speed="400"
+								data-start="1500"
 								data-easing="Power3.easeInOut"
 								data-elementdelay="0.1"
 								data-endelementdelay="0.1"
@@ -245,8 +245,8 @@
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
 								data-x="150"
 								data-y="300" 
-								data-speed="300"
-								data-start="2500"
+								data-speed="400"
+								data-start="1500"
 								data-easing="Power3.easeInOut"
 								data-splitin="none"
 								data-splitout="none"
@@ -255,14 +255,14 @@
 								data-endspeed="300"
 
 								style="z-index: 5; max-width: 10; max-height: 3; white-space: nowrap;">
-									<a class="btn btn-transparent btn-lg" href="#">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-transparent btn-lg" href="#services">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
 								data-x="150"
 								data-y="367" 
-								data-speed="300"
-								data-start="2500"
+								data-speed="400"
+								data-start="1500"
 								data-easing="Power3.easeInOut"
 								data-splitin="none"
 								data-splitout="none"
@@ -285,7 +285,7 @@
 							<div class="tp-caption font-roboto skewfromleft tp-resizeme"
 								data-x="50"
 								data-y="100" 
-								data-speed="500"
+								data-speed="400"
 								data-start="1500"
 								data-easing="Cubic.easeOut"
 								data-splitin="none"
@@ -301,8 +301,8 @@
 							<div class="tp-caption skewfromrightshort tp-resizeme"
 								data-x="50"
 								data-y="300" 
-								data-speed="500"
-								data-start="1000"
+								data-speed="400"
+								data-start="1500"
 								data-easing="easeInCirc"
 								data-splitin="none"
 								data-splitout="none"
@@ -317,7 +317,7 @@
 							<div class="tp-caption sfb tp-resizeme"
 								data-x="50"
 								data-y="412" 
-								data-speed="500"
+								data-speed="400"
 								data-start="1500"
 								data-easing="Power3.easeIn"
 								data-splitin="none"
@@ -326,7 +326,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-danger btn-lg" href="#">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-danger btn-lg" href="#services">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<!-- SLIDE  -->
@@ -339,7 +339,7 @@
 							<div class="tp-caption font-roboto skewfromleft tp-resizeme"
 								data-x="50"
 								data-y="100" 
-								data-speed="500"
+								data-speed="400"
 								data-start="1500"
 								data-easing="Cubic.easeOut"
 								data-splitin="none"
@@ -355,8 +355,8 @@
 							<div class="tp-caption skewfromrightshort tp-resizeme"
 								data-x="50"
 								data-y="300" 
-								data-speed="500"
-								data-start="1000"
+								data-speed="400"
+								data-start="1500"
 								data-easing="easeInCirc"
 								data-splitin="none"
 								data-splitout="none"
@@ -371,7 +371,7 @@
 							<div class="tp-caption sfb tp-resizeme"
 								data-x="50"
 								data-y="412" 
-								data-speed="500"
+								data-speed="400"
 								data-start="1500"
 								data-easing="Power3.easeIn"
 								data-splitin="none"
@@ -399,7 +399,7 @@
 
 
 			<!-- BUTTON CALLOUT -->
-			<a href="#" class="btn btn-xlg btn-danger fs-20 fullwidth m-0 rad-0 p-40">
+			<a href="#contact" class="btn btn-xlg btn-danger fs-20 fullwidth m-0 rad-0 p-40">
 				<span class="font-lato fs-30">
 					Interested? 
 					<strong> Give us a call! &raquo;</strong>
@@ -413,26 +413,30 @@
 			<section id="services">
 				<div class="container">
 
+					<div class="heading-title heading-dotted text-center">
+						<h2>Our Services</h2>
+					</div>
+
 					<div class="row">
 						<div class="col-sm-4">
 							<img class="img-fluid" src="demo_files/images/SERVICES/Awards.jpg" alt="img" />
 							<h3 class="mt-10">Our Projects and Awards</h3>
 							<p>RocketElevators is a company who won a numerous amount of awards. If you are interested into our amazing projects and awards, you can learn more about them bellow!</p>
-							<a href="#" class="btn btn-default">READ MORE</a>
+							<a href="#portfolio" class="btn btn-default">READ MORE</a>
 						</div>
 
 						<div class="col-sm-4">
 							<img class="img-fluid" src="demo_files/images/SERVICES/Residential.webp" alt="img" />
 							<h3 class="mt-10">Residential Buildings</h3>
 							<p>Are you looking for a better, faster and more innovated way to get to another floor? Well, we're here for you! You can read more about our residential elevators services down bellow!</p>
-							<a href="#" class="btn btn-default">READ MORE</a>
+							<a href="#portfolio" class="btn btn-default">READ MORE</a>
 						</div>
 
 						<div class="col-sm-4">	
 							<img class="img-fluid" src="demo_files/images/SERVICES/Corporate.jpg" alt="img" />
 							<h3 class="mt-10">Corporate Buildings</h3>
 							<p>Do you work with thousands of people? Tired of using the stairs? Great, we got you covered! We offer corporate elevators for entrepreneurs like you. Read more to get another level!</p>
-							<a href="#" class="btn btn-default">READ MORE</a>
+							<a href="#portfolio" class="btn btn-default">READ MORE</a>
 						</div>
 
 						
@@ -456,7 +460,7 @@
 						<h2 class="fs-40 fw-300"> Elevators for Innovative Buildings Since 1976</h2>
 						<a class="btn btn-default btn-lg" href="#">REQUEST A QUOTE<i class="fa fa-angle-right"></i></a> 
 						&nbsp; OR &nbsp; 
-						<a class="btn btn-danger btn-lg" href="#">CONTACT US<i class="fa fa-angle-right"></i></a>
+						<a class="btn btn-danger btn-lg" href="#contact">CONTACT US<i class="fa fa-angle-right"></i></a>
 					</div>
 
 				</div>
@@ -467,7 +471,7 @@
 
 
 			<!-- PORTFOLIO -->
-			<section id="work">
+			<section id="portfolio">
 				<div class="container">
 
 					<div class="heading-title heading-dotted text-center">
@@ -477,9 +481,9 @@
 					<div class="text-center">
 						<ul class="nav nav-pills mix-filter mb-60">
 							<li data-filter="all" class="filter active"><a href="#">All</a></li>
-							<li data-filter="development" class="filter"><a href="#">Residential</a></li>
-							<li data-filter="photography" class="filter"><a href="#">Corporate</a></li>
-							<li data-filter="design" class="filter"><a href="#">Awards</a></li>
+							<li data-filter="residential" class="filter"><a href="#">Residential</a></li>
+							<li data-filter="corporate" class="filter"><a href="#">Corporate</a></li>
+							<li data-filter="awards" class="filter"><a href="#">Awards</a></li>
 						</ul>
 					</div>
 
