added res and corp links into index

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 								data-endspeed="300"
 
 								style="z-index: 5; max-width: 10; max-height: 3; white-space: nowrap;">
-									<a class="btn btn-transparent btn-lg" href="#services">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-transparent btn-lg" href="#">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
@@ -326,7 +326,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-danger btn-lg" href="#services">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-danger btn-lg" href="residential.html" target="_blank">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<!-- SLIDE  -->
@@ -380,7 +380,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-default btn-lg" href="#">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-default btn-lg" href="corporate.html" target="_blank">SERVICE DETAILS &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						
 
@@ -494,7 +494,7 @@
 						<div class="row mix-grid">
 
 
-							<div class="col-md-3 col-sm-3 mix development"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix residential"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -525,7 +525,7 @@
 
 							</div><!-- /item -->
 
-							<div class="col-md-3 col-sm-3 mix development"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix residential"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -556,7 +556,7 @@
 
 							</div><!-- /item -->
 
-							<div class="col-md-3 col-sm-3 mix development"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix residential"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -587,7 +587,7 @@
 
 							</div><!-- /item -->
 
-							<div class="col-md-3 col-sm-3 mix development"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix residential"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -618,7 +618,7 @@
 
 							</div><!-- /item -->
 
-							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix corporate"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -650,7 +650,7 @@
 							</div><!-- /item -->
 
 
-							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix corporate"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -681,7 +681,7 @@
 
 							</div><!-- /item -->
 
-							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix corporate"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -712,7 +712,7 @@
 
 							</div><!-- /item -->
 
-							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix corporate"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -744,7 +744,7 @@
 							</div><!-- /item -->
 
 
-							<div class="col-md-3 col-sm-3 mix design"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix awards"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -776,7 +776,7 @@
 							</div><!-- /item -->
 
 
-							<div class="col-md-3 col-sm-3 mix design"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix awards"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -808,7 +808,7 @@
 							</div><!-- /item -->
 
 
-							<div class="col-md-3 col-sm-3 mix design"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix awards"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -839,7 +839,7 @@
 
 							</div><!-- /item -->
 
-							<div class="col-md-3 col-sm-3 mix design"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix awards"><!-- item -->
 
 								<div class="item-box">
 									<figure>
