added price radiobuttons

--- a/quote.html
+++ b/quote.html
@@ -343,6 +343,25 @@
 					</div>
 				</div>
 
+				<div>
+				    <div class="row">
+					  <input id="priceUnitStandard" type="radio" name="building-type" value="standard">
+					  Standard
+					  <input id="priceUnitPremium" type="radio" name="building-type" value="premium">
+					  Premium
+					  <input id="priceUnitExcelium" type="radio" name="building-type" value="excelium">
+					  Excelium
+				    </div>
+				    <br>
+					
+				   <div class="readonly-fields">
+				      <div>
+					    <label>Price:</label>
+					    <input id="priceUnit" class="form-control" name="building-type" type="number" value="" readonly>
+				      </div>
+				   </div>
+				</div>
+
 			</section>
 			<!-- /QUOTE -->
 
