commercial elevator final price js

--- a/quote.html
+++ b/quote.html
@@ -376,23 +376,23 @@
 				    <br>
 
 				    <div class="readonly-fields">
-					    <div class="col-sm-1">
+					    <div class="col-sm-2">
 						    <label>Amount of elevators needed:</label>
-						    <input id="NbElevators" class="form-control" name="building-type" type="number" value="" readonly>
+						    <input id="amountOfElevatorsNeeded" class="form-control" name="building-type" type="number" value="" readonly>
 					    </div>
-					    <div class="col-sm-1">
+					    <div class="col-sm-2">
 						    <label>Unit price for each elevators:</label>
-						    <input id="priceUnit" class="form-control" name="building-type" type="number" value="" readonly>
+						    <input id="priceUnitElevators" class="form-control" name="building-type" type="number" value="" readonly>
 					    </div>
-					    <div class="col-sm-1">
+					    <div class="col-sm-2">
 						   <label>Total price for all the elevators:</label>
-						   <input id="priceAll" class="form-control" name="building-type" type="number" value="" readonly>
+						   <input id="priceAllElevators" class="form-control" name="building-type" type="number" value="" readonly>
 					    </div>
-					    <div class="col-sm-1">
+					    <div class="col-sm-2">
 						   <label>Installation fees:</label>
-						   <input id="fees" class="form-control" name="building-type" type="number" value="" readonly>
+						   <input id="installationFees" class="form-control" name="building-type" type="number" value="" readonly>
 					    </div>
-					    <div class="col-sm-1">
+					    <div class="col-sm-2">
 						   <label>final price:</label>
 						   <input id="finalPrice" class="form-control" name="building-type" type="number" value="" readonly>
 					    </div>
