corporate elevator final price js

--- a/quote.html
+++ b/quote.html
@@ -265,7 +265,7 @@
 			    <div>
 					<div class="residential building">
 					  The number of appartments in the building:
-					  <input id="residentialNbAppartments" type="text">
+					  <input id="residentialNbApartments" type="text">
 					</div>
 					<div class="residential building">
 					  The number of floors (excluding basements):
@@ -360,15 +360,15 @@
 				<div>
 					<div>
 						<label> 
-							<input id="priceUnitStandard" type="radio" name="building-type" value="standard">
+							<input id="priceUnitStandard" type="radio" name="elevator-type" value="standard">
 							Standard
 						</label>
 						<label>
-							<input id="priceUnitPremium" type="radio" name="building-type" value="premium">
+							<input id="priceUnitPremium" type="radio" name="elevator-type" value="premium">
 							Premium
 						</label>
 						<label>
-							<input id="priceUnitExcelium" type="radio" name="building-type" value="excelium">
+							<input id="priceUnitExcelium" type="radio" name="elevator-type" value="excelium">
 							Excelium
 						</label>
 					</div>
@@ -378,23 +378,23 @@
 				    <div class="readonly-fields">
 					    <div class="col-sm-2">
 						    <label>Amount of elevators needed:</label>
-						    <input id="amountOfElevatorsNeeded" class="form-control" name="building-type" type="number" value="" readonly>
+						    <input id="amountOfElevatorsNeeded" class="form-control" name="elevator-type" type="number" value="" readonly>
 					    </div>
 					    <div class="col-sm-2">
 						    <label>Unit price for each elevators:</label>
-						    <input id="priceUnitElevators" class="form-control" name="building-type" type="number" value="" readonly>
+						    <input id="priceUnitElevators" class="form-control" name="elevator-type" type="number" value="" readonly>
 					    </div>
 					    <div class="col-sm-2">
 						   <label>Total price for all the elevators:</label>
-						   <input id="priceAllElevators" class="form-control" name="building-type" type="number" value="" readonly>
+						   <input id="priceAllElevators" class="form-control" name="elevator-type" type="number" value="" readonly>
 					    </div>
 					    <div class="col-sm-2">
 						   <label>Installation fees:</label>
-						   <input id="installationFees" class="form-control" name="building-type" type="number" value="" readonly>
+						   <input id="installationFees" class="form-control" name="elevator-type" type="number" value="" readonly>
 					    </div>
 					    <div class="col-sm-2">
 						   <label>final price:</label>
-						   <input id="finalPrice" class="form-control" name="building-type" type="number" value="" readonly>
+						   <input id="finalPrice" class="form-control" name="elevator-type" type="number" value="" readonly>
 					    </div>
 				    </div>
 				</div>
