redirected index and quote page with href, small modifications

--- a/corporate.html
+++ b/corporate.html
@@ -115,7 +115,7 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main nav-onepage">
 									<li class="active"><!-- HOME -->
-										<a href="#">
+										<a href="index.html" target="blank">
 											HOME
 										</a>
 									</li>
@@ -266,7 +266,7 @@
 						<h2>Our Services</h2>
 					</div>
 
-					<div class="heading-title text-center"
+					<div class="heading-title text-center">
 				        <p>Do you work with thousands of people? Tired of using the stairs? Great, we got you covered! We offer corporate elevators for entrepreneurs like you. Read more to get another level!</p>
 					</div>
 
