--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 								data-endspeed="300"
 
 								style="z-index: 5; max-width: 10; max-height: 3; white-space: nowrap;">
-									<a class="btn btn-transparent btn-lg" href="#">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-transparent btn-lg" href="#services">OUR SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
@@ -275,7 +275,7 @@
 								data-endspeed="300"
 
 								style="z-index: 5; max-width: 10; max-height: 3; white-space: nowrap;">
-									<a class="btn btn-transparent btn-lg" href="#">QUOTE REQUEST &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-transparent btn-lg" href="quote.html" target="blank">QUOTE REQUEST &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						</li>
 
@@ -462,7 +462,7 @@
 
 					<div class="text-center">
 						<h2 class="fs-40 fw-300"> Elevators for Innovative Buildings Since 1976</h2>
-						<a class="btn btn-default btn-lg" href="#">REQUEST A QUOTE<i class="fa fa-angle-right"></i></a> 
+						<a class="btn btn-default btn-lg" href="quote.html" target="blank">REQUEST A QUOTE<i class="fa fa-angle-right"></i></a> 
 						&nbsp; OR &nbsp; 
 						<a class="btn btn-danger btn-lg" href="#contact">CONTACT US<i class="fa fa-angle-right"></i></a>
 					</div>
