--- a/quote.html
+++ b/quote.html
@@ -118,7 +118,7 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main nav-onepage">
 									<li class="active"><!-- HOME -->
-										<a href="#">
+										<a href="index.html" target="blank">
 											HOME
 										</a>
 									</li>
