--- a/residential.html
+++ b/residential.html
@@ -115,7 +115,7 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main nav-onepage">
 									<li class="active"><!-- HOME -->
-										<a href="#">
+										<a href="index.html" target="blank">
 											HOME
 										</a>
 									</li>
@@ -266,7 +266,7 @@
 						<h2>Our Services</h2>
 					</div>
 
-					<div class="heading-title text-center"
+					<div class="heading-title text-center">
 				        <p>Are you looking for a better, faster and more innovated way to get to another floor? Well, we're here for you! You can read more about our residential elevators services down bellow!</p>
 					</div>
 
