testing quote request sections placements

--- a/quote.html
+++ b/quote.html
@@ -27,9 +27,6 @@
 		<!-- PAGE LEVEL SCRIPTS -->
 		<link href="assets/css/header-1.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/color_scheme/yellow.css" rel="stylesheet" type="text/css" id="color_scheme" />
-
-	
-
 	</head>
 
 	<!--
@@ -53,8 +50,8 @@
 		BACKGROUND IMAGE [together with .boxed class]
 		data-background="assets/images/_smarty/boxed_background/1.jpg"
 	-->
-	<body class="smoothscroll enable-animation">
 
+	<body class="smoothscroll enable-animation">
 
 		<!-- wrapper -->
 		<div id="wrapper">
@@ -219,7 +216,6 @@
 			</div>
 			<!-- /REVOLUTION SLIDER -->
 
-
 			<hr class="m-0" /><!-- 1px line separator -->
 
 
@@ -241,7 +237,16 @@
 						<h2>Quote Request</h2>
 					</div>
 
+				<ul class="row">
+					<li class="col-md-4 col-sm-4 col-12"></li>
+					<li class="col-md-4 col-sm-4 col-12 text-center">
+						<h3>What type of project?</h3>
+					</li>
+					<li class="col-md-4 col-sm-4 col-12"></li>
+
+
 					<div>
+						
 						<label> 
 							<input id="residential" type="radio" name="buildingType" value="residential">
 							Residential
@@ -259,7 +264,7 @@
 							Hybrid
 						</label>
 					</div>
-				</div>	
+				</ul>	
 
 				<!-- RESIDENTIAL -->
 			    <div>
