--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					<ul class="hide">
 					
 						<!-- SLIDE  -->
-						<li data-transition="parallaxtobottom" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off"  data-title="Home">
+						<li data-transition="parallaxtobottom" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off"  data-title="Home" class="tp-revslider-slidesli active-revslide current-sr-slide-visible" style="width: 100%; height: 100%; overflow: hidden; z-index: 20; visibility: inherit; opacity: 1;">
 							<!-- MAIN IMAGE -->
 							<img src="demo_files/images/SLIDES/Slide1.jpg"  alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
@@ -280,7 +280,7 @@
 						</li>
 
 						<!-- SLIDE  -->
-						<li data-transition="parallaxtotop" data-slotamount="9" data-masterspeed="300"  data-saveperformance="off" data-title="Residential Service">
+						<li data-transition="parallaxtotop" data-slotamount="9" data-masterspeed="300"  data-saveperformance="off" data-title="Residential Service" class="tp-revslider-slidesli active-revslide current-sr-slide-visible" style="width: 100%; height: 100%; overflow: hidden; z-index: 20; visibility: inherit; opacity: 1;">
 							<!-- MAIN IMAGE -->
 							<img src="demo_files/images/SLIDES/Slide2.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
@@ -334,7 +334,7 @@
 							</div>
 
 							<!-- SLIDE  -->
-						<li data-transition="parallaxtotop" data-slotamount="8" data-masterspeed="300"  data-saveperformance="off" data-title="Corporate Service">
+						<li data-transition="parallaxtotop" data-slotamount="8" data-masterspeed="300"  data-saveperformance="off" data-title="Corporate Service" class="tp-revslider-slidesli active-revslide current-sr-slide-visible" style="width: 100%; height: 100%; overflow: hidden; z-index: 20; visibility: inherit; opacity: 1;">
 							<!-- MAIN IMAGE -->
 							<img src="demo_files/images/SLIDES/Slide3.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
